--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <section id="cover" class="hero">
         <div class="container wrap">
             <div>
-                <div class="eyebrow">Portfolio 2025</div>
+                <div class="eyebrow"></div>
                 <h1>Isha Vadnere – Digital Marketing & Content Specialist</h1>
                 <p class="blurb">I create content strategies and campaigns that deliver measurable growth. With
                     experience across social media management, campaign calendars, and lead generation, I bring both
@@ -458,5 +458,6 @@
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
+
 
 </html>
