--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
                     <a class="btn outline" href="https://linkedin.com/in/isha-vadnere" target="_blank"
                         rel="noopener">LinkedIn</a>
                     <a class="btn" href="mailto:ishavadnere3@gmail.com">Email Me</a>
+                    <a class="btn outline" href="https://facelesswithisha.com/mediakit" target="_blank"
+                        rel="noopener">View Media Kit</a>
                 </div>
             </div>
             <div>
@@ -461,4 +463,5 @@
 
 
 </html>
+
 
