--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <a class="btn outline" href="https://linkedin.com/in/isha-vadnere" target="_blank"
                         rel="noopener">LinkedIn</a>
                     <a class="btn" href="mailto:ishavadnere3@gmail.com">Email Me</a>
-                    <a class="btn outline" href="https://facelesswithisha.com/mediakit" target="_blank"
+                    <a class="btn outline" href="https://beacons.ai/facelesswithisha/mediakit" target="_blank"
                         rel="noopener">View Media Kit</a>
                 </div>
             </div>
@@ -463,5 +463,6 @@
 
 
 </html>
+
 
 
