--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Isha Vadnere — Digital Marketing & Content Specialist</title>
+    <title>Isha Vadnere<br>Marketing & Communications Executive </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -316,7 +316,7 @@
                     creativity and results.</p>
                 <div class="btn-group" role="group" aria-label="Primary actions">
                     <a class="btn"
-                        href="https://drive.google.com/file/d/1ZDxYYybeOrUdl9K8Vj0ToclmqtPDOE_1/view?usp=sharing"
+                        href="https://drive.google.com/file/d/10xeBkDXB-HIniTikTmSlYF_ncAp6mmV8/view?usp=sharing"
                         target="_blank" rel="noopener">Download CV</a>
                     <a class="btn outline" href="https://linkedin.com/in/isha-vadnere" target="_blank"
                         rel="noopener">LinkedIn</a>
@@ -463,6 +463,7 @@
 
 
 </html>
+
 
 
 
