--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
         <div class="container wrap">
             <div>
                 <div class="eyebrow"></div>
-                <h1>Isha Vadnere – Digital Marketing & Content Specialist</h1>
+                <h1>Isha Vadnere </h1>
+                <h2>Marketing & Communications Executive</h2>
                 <p class="blurb">I create content strategies and campaigns that deliver measurable growth. With
                     experience across social media management, campaign calendars, and lead generation, I bring both
                     creativity and results.</p>
@@ -463,6 +464,7 @@
 
 
 </html>
+
 
 
 
