--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         }
 
         h1 {
+            text-align: center;
             margin: 8px 0 10px;
             font-size: 42px;
             line-height: 1.1
@@ -464,6 +465,7 @@
 
 
 </html>
+
 
 
 
